--- a/styles.css
+++ b/styles.css
@@ -11,45 +11,39 @@
 
 
 
+/*Cascade & Specificity 
 
+strong {
+   padding: 30px;
+   color: blueviolet;
+   font-family : cursive;
+}
 
+p strong {
+   padding: 30px;
+   color: limegreen;
+   font-family : cursive;
+}
+.css-tut p strong {
+   padding: 30px;
+   color:coral 
+   font-family : cursive;
+} 
+
+*/
 
 /* Class selectors Eg */
 .class-selector {
-   text-align: right;
+   text-align: center;
    font-style: italic;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* Grouping Selectors Eg 1
 p strong {
    padding: 30px;
    color: blueviolet;
    font-family : cursive;
-}
-
-*/
+}*/
 
 
 /* Universal Selector Eg 1 
