--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
     width:100vw;
     background-color: red;
     border: 2px solid black;
-    margin:10px;
+    /* margin:10px; */
 }
 .basicppt{
     display: block;
@@ -62,14 +62,14 @@ Georgia (serif)
 Garamond (serif)
 Courier New (monospace)
 Brush Script MT (cursive)*/
-.basicppt{
+/* .basicppt{
     font-family:Arial, Helvetica, sans-serif;
     font-family: monospace;
     font-family: 'Times New Roman', Times, serif;
     font-style: italic;
     font-weight: 200;
-    /* font-variant:small-caps; */
-}
+    font-variant:small-caps;
+} */
 /* .basicparent{
     font-size: 20px;
 }
@@ -96,12 +96,14 @@ html{
 .flex-parent .flex-child{
     height: 100px;
     width:100px;
-    /* padding: 50px; */
+    padding: 50px;
     margin: 50px;
     background-color: green;
 }
-@media only screen and (max-width: 350px){
+@media only screen and (max-width: 450px){
     .flex-parent{
-        flex-direction: column;
+        /* flex-direction: column; */
+        flex-wrap: wrap;
+        /* margin: 10px; */
     }
 }
